# prosit2csharp

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  tfmodel2onnx_compatible.py  verify_installation.py
csharp/: prosit2csharp.sln
csharp/PrositProject/: PrositProject.sln
csharp/PrositProject/PrositProject/: PrositProject.csproj  Readers.cs  SpectralPredictor.cs  Tensorizer.cs
csharp/PrositProject/PrositProject/Tests/: Test.cs
python/: README.md  download_prosit_model.py  prosit_onnx_inference.ipynb  pyproject.toml  tfmodel2onnx.py  tfmodel2onnx_compatible.py
