[project]
name = "prosit2csharp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "numpy>=1.21.0,<1.25.0",
    "onnx>=1.17.0,<1.18.0",
    "onnxruntime>=1.23.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "tf2onnx>=1.15.0,<1.17.0",
    "typing-extensions>=4.12.0",
    "tensorflow>=2.12.1,<2.13.0",
    "protobuf>=3.20.0,<3.21.0",
    "keras>=2.12.0,<2.13.0",
    "h5py>=3.15.0",
    "pyyaml>=6.0.0",
    "collections-extended>=2.0.0",
]

[tool.uv]
required-environments = [
    "python_version >= '3.11' and platform_system == 'Windows'",
]

[tool.uv.sources]
prosit = { git = "https://github.com/kusterlab/prosit" }
